# chroma-vector-search

./: .env  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  ENTERPRISE_PERFORMANCE_TEST.md  ENTERPRISE_PERFORMANCE_TEST_WITH_GPU.md  FUTURE_ROADMAP.md  GPU_ACCELERATION_PLAN.md  LICENSE  MICROSERVICES_ARCHITECTURE.md  MICROSERVICES_README.md  OPENKASS_PERFORMANCE_TEST.md  PROJECT_SUMMARY.md  README.md  README.ru.md  README.zh.md  RELEASE_v1.0.0.md  UPDATE_SUMMARY.md  WEBSOCKET_IMPLEMENTATION_PLAN.md  WEBSOCKET_IMPLEMENTATION_SUMMARY.md  chroma_client.py  chroma_rest_client.py  chroma_simple_server.py  docker-compose.optimized.yml  docker-compose.yml  install_chroma.sh  keyword_search.py  load_test.py  opencode_chroma_simple.jsonc  performance_test_gpu.py  performance_test_results.json  pyproject.toml  quick_websocket_test.py  requirements-gpu.txt  requirements.txt  search_fuser.py  setup.py  (+8 more)
.github/workflows/: ci-cd.yml  test.yml
config/: postgres-init.sql  redis.conf
docs/: API.md  DEPLOYMENT.md  GPU_ACCELERATION.md  HYBRID_SEARCH.md  WEBSOCKET_API.md
examples/: example_usage.py  hybrid_search_demo.py
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
services/api_gateway/: Dockerfile  main.py  requirements.txt
services/indexing_service/: Dockerfile  main.py  requirements.txt
services/metadata_service/: Dockerfile  main.py  requirements.txt
services/search_service/: Dockerfile  main.py  requirements.txt
tests/: __init__.py  test_basic.py  test_client.py  test_gpu_acceleration.py  test_hybrid_search.py  test_integration_hybrid.py
web_ui/: app.js  index.html  style.css
